--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -80,7 +80,8 @@ en:
               not_found: 'Like not Found'
             comments:
               not_found: 'Comment not Found'
-        no_event_owner: 'Event owner was not provided'
+        no_event_owner_provided: 'Event owner was not provided'
+        no_event_owner_found: 'Event owner was not found'
       payments:
         pay_error: "An error has occurred: %{error}. Please try again"
         payment_sources_error: "An error has occurred: %{error}. Please try again"
