--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -118,6 +118,8 @@ en:
         not_found: 'That group does not exist'
       subgroups:
         not_found: 'That subgroup does not exist'
+      events:
+        not_found: 'That event does not exist'
       contacts:
         not_found: 'Contact(s) do not exist'
       posts:
@@ -126,6 +128,8 @@ en:
         not_found: 'Special Offer(s) do not exist'
       members:
         not_found: 'Member(s) do not exist'
+      subgroup_event_approvals:
+        not_found: 'Subgroup Event approval(s) do not exist'
       users:
         no_currency_present: 'In order to proceed you must set the default currency on your profile. Please set your default currency and try again.'
         already_blocked: 'That user has already been blocked'
