[APP-465] Search. Part 3

--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -200,5 +200,7 @@ en:
         requests:
           not_found: 'Friend Request Not Found'
           invalid_scope: 'Invalid Scope Found'
+      searches:
+        empty_request: 'Please, provide text for search and choose filters'
 
 
