[#APP-314] add accepted membership notifier

--- a/config/locales/notifiers/en.yml
+++ b/config/locales/notifiers/en.yml
@@ -48,3 +48,6 @@ en:
         message: 'Your Facebook Event Import has completed.'
     group_invitation:
       message: '%{user} has invited you to group %{group}'
+    group_membership:
+      accepted:
+        message: '%{user} has accepted your request to join %{group_category} %{group}'
